# aliasai-validator

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
docs/: ARCHITECTURE.md  QUICKSTART.md
examples/: custom_validation.py  simple_usage.py
scripts/: check_env.sh  run_test.sh
src/: __init__.py  agent_registry.py  main.py  validation_manager.py
